<resources>
    <string name="app_name">MyKeyboardSamples</string>
    <string name="sign_up">Sign Up</string>
    <string name="enterfirst_name">Enter First Name</string>
    <string name="enter_Surname">Enter Surname</string>
    <string name="enter_email_address">Enter Email Address</string>
    <string name="enter_date_of_birth">Enter Date of Birth</string>
    <string name="enter_phone_number">Enter Phone Number</string>
    <string name="enter_password">Enter Password</string>
    <string name="accept_terms_and_conditions">Accept Terms And Conditions</string>
    <string name="create_account">Create Account</string>
    <string name="logo">logo</string>
    <string name="confirm_password">Confirm Password</string>
    <string-array name="spinner_label">
        <item>Home</item>
        <item>Work</item>
        <item>Mobile</item>
        <item>Other</item>

    </string-array>
</resources>