<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/teal1"
    tools:context=".MainActivity">


    <TextView
        android:id="@+id/sign_up"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/sign_up"
        android:textStyle="bold"
        android:textSize="24sp"
        android:textColor="@color/white"
        android:layout_centerHorizontal="true"
         />
<EditText
    android:id="@+id/first_name"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_below="@+id/sign_up"
    android:hint="@string/enterfirst_name"
    android:textColorHint="@android:color/white"
    android:inputType="textCapSentences"
    android:drawableLeft="@drawable/ic_account_box_white" />

    <EditText
        android:id="@+id/surname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/sign_up"
        android:layout_alignParentEnd="true"
        android:hint="@string/enter_Surname"
        android:textColorHint="@android:color/white"
        android:inputType="textCapSentences"
        android:layout_alignParentRight="true" />

    <EditText
        android:id="@+id/email_address"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/first_name"
        android:drawableLeft="@drawable/ic_email_white"
        android:hint="@string/enter_email_address"
        android:textColorHint="@android:color/white"
        android:inputType="textEmailAddress"
        />
    <EditText
        android:id="@+id/birthday"
        android:drawableLeft="@drawable/ic_date_of_birth"

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:layout_below="@+id/email_address"
        android:hint="@string/enter_date_of_birth"
        android:textColorHint="@android:color/white"
        />

    <EditText
        android:id="@+id/phone"
android:drawableLeft="@drawable/ic_baseline_local_phone_24"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:layout_below="@+id/birthday"
        android:hint="@string/enter_phone_number"
        android:textColorHint="@android:color/white"
        android:inputType="phone"
        />
    <Spinner
        android:id="@+id/phone_spinner"
        android:layout_below="@id/birthday"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toEndOf="@+id/phone"
        android:layout_toRightOf="@+id/phone" />
    <EditText
        android:id="@+id/password"
        android:drawableLeft="@drawable/ic_password"

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:layout_below="@+id/phone"
        android:hint="@string/enter_password"
        android:textColorHint="@android:color/white"
        android:textColor="@android:color/white"
        android:inputType="textPassword"
        />

    <EditText
        android:id="@+id/confirm_password"
        android:layout_width="176dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/phone"
        android:layout_alignParentRight="true"
        android:ems="10"
        android:hint="@string/confirm_password"
        android:inputType="textPassword"
        android:textColor="@android:color/white"
        android:textColorHint="@android:color/white" />


    <CheckBox
        android:id="@+id/conditions"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/password"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="32dp"
        android:checked="true"
        android:onClick="showToast"
        android:text="@string/accept_terms_and_conditions"
        android:textColor="@color/white" />

    <Button

        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/conditions"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="26dp"
        android:background="@color/black"
        android:onClick="createAccount"
        android:text="@string/create_account"
        android:textAllCaps="false"
        android:textColor="@color/white" />


</RelativeLayout>